--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,6 @@
         }
     },
     "replace": {
-        "magicpill/collection": "self.version",
+        "magicpill/collection": "self.version"
     }
 }
