--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,9 @@
     "require": {
         "php": ">=5.4.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "~4.2"
+    },
     "autoload": {
         "psr-0": {
             "MagicPill\\": "library/"
