--- a/src/MagicPill/Core/composer.json
+++ b/src/MagicPill/Core/composer.json
@@ -13,7 +13,9 @@
   },
   "target-dir": "MagicPill/Core",
   "require": {
-    "php": ">=5.5"
+    "php": ">=5.5",
+    "magicpill/mixin": "*",
+    "magicpill/exception": "*"
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
