--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
   ],
   "license": "BSD-2-Clause",
   "require": {
-    "php": ">=5.5"
+    "php": ">=5.5",
+    "container-interop/container-interop": "~1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.2"
